--- a/result.yml
+++ b/result.yml
@@ -1,11 +1,10 @@
-!!python/tuple
-- customer_id: !!python/long '1'
-  id: !!python/long '1'
+- customer_id: 1
+  id: 1
   price: 35.55
-  product_id: !!python/long '1'
-  quantity: !!python/long '25'
-- customer_id: !!python/long '1'
-  id: !!python/long '2'
+  product_id: 1
+  quantity: 25
+- customer_id: 1
+  id: 2
   price: 45.0
-  product_id: !!python/long '2'
-  quantity: !!python/long '12'
+  product_id: 2
+  quantity: 12
